javascript/checker/4IW1/exercise-1/reports/wdelenclos_esgi-javascript.log
Invalid script: SyntaxError: Unexpected token else
/4IW1/exercise-1/scripts/wdelenclos_esgi-javascript.js:53
    else{
    ^^^^

SyntaxError: Unexpected token else
    at new Script (vm.js:51:7)
    at createScript (vm.js:136:10)
    at Object.runInThisContext (vm.js:197:10)
    at Module._compile (module.js:613:28)
    at Object.Module._extensions..js (module.js:660:10)
    at Module.load (module.js:561:32)
    at tryModuleLoad (module.js:501:12)
    at Function.Module._load (module.js:493:3)
    at Module.require (module.js:593:17)
    at require (internal/module.js:11:18)
